--- a/myapp/package.json
+++ b/myapp/package.json
@@ -29,9 +29,12 @@
     "express": "^4.16.3",
     "http": "0.0.0",
     "mysql": "github:mysqljs/mysql",
+    "mysql-events": "0.0.11",
     "ngx-bootstrap": "^2.0.3",
     "request": "^2.87.0",
     "rxjs": "^5.5.6",
+    "socket.io": "^2.1.1",
+    "socket.io-client": "^2.1.1",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
